# kernel

./: .gitignore  Cargo.toml  Makefile  Makefile.old  Makefile2  README.md  build.rs  go.mod  kernel8.img  kernel_symbols.mk  main.go
.cargo/: config.toml
.github/workflows/: docker.yml
builder/: Cargo.toml  Makefile  go.mod  go.sum
builder/src/: config.rs  data.rs  demangler.rs  docker.rs  main.rs  util.rs
builder/src/commands/: build.rs  clean.rs  mod.rs
builder/src/docker/: connect.rs  container.rs  logs.rs  mod.rs  wait.rs
builder/src/logger/: colors.rs  mod.rs
builder/tasks/: config.go
builder/tasks/clean/: run.go
builder/tasks/test/: run.go
docker/: Dockerfile  Gemfile  auto  build.sh  rpi3.cfg  rpi4.cfg
gobuilder/: main.go
gobuilder/tasks/: args.go  config.go
gobuilder/tasks/check/: run.go
gobuilder/tasks/run/: run.go
kernel/: Cargo.toml
kernel/src/: backtrace.rs  cpu.rs  exception.rs  time.rs
kernel/src/arch/x86_64/: README.md
kernel/src/bsp/: mod.rs
kernel/src/cpu/: boot.rs  smp.rs
kernel/src/exception/: asynchronous.rs
kernel/src/memory/: mmu.rs
kernel/src/memory/mmu/: translation_table.rs
libraries/debug-symbol-types/src/: lib.rs
make/: format.mk
tasks/: common.go  config.go
tasks/clean/: run.go
tasks/debug/: run.go
tasks/run/: run.go
tasks/test/: run.go
tools/builder/: go.mod  main.go
tools/builder/clean/: run.go
tools/translation_table_tool/: bsp.rb
